--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
         </div>
 
         <div class="about-icons">
-            <div class="serve about-icon">
+            <div class="serve about-card">
                 <img src="tray.png" alt="">
                 <h3>Serve Healthy Food</h3>
                 <p>We serve all healthy food here. You can choose any food you like.</p>
             </div>
 
-            <div class="quality about-icon">
+            <div class="quality about-card">
                 <img src="premium-badge.png" alt="">
                 <h3>Best Quality</h3>
                 <p>Our food quality is excellent. You will get exactly what you want here.</p>
             </div>
 
-            <div class="delivery about-icon">
+            <div class="delivery about-card">
                 <img src="fast-delivery.png" alt="">
                 <h3>Fast Delivery</h3>
                 <p>You can say the main goal of our delivery man is to deliver orders quickly. You will recieve it
