--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Ofe Delight</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -154,6 +156,120 @@
 
     </section>
 
+    <div class="special-menu-container">
+        <h2>SPECIAL MENU</h2>
+        <p>Some of our special food menu is given here. These are what people order more if you want you can order from here.</p>
+        <div class="swiper">
+            
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                    <img src="ekang.png" alt="">
+                    <h3 class="menu-title">Ekpang Soup</h3>
+                    <div class="stars">★★★★★(169)</div>
+                    <div class="price">₦5000</div>
+                    <span class="menu-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" style="width: 30px; height: 30px">
+                            <path d="M23.297,9.035c-.57-.658-1.396-1.035-2.267-1.035h-.089C20.441,3.507,16.624,0,12,0S3.559,3.507,3.059,8h-.059c-.871,0-1.697,.377-2.267,1.035C.164,9.692-.093,10.563,.031,11.424l1.061,7.424c.419,2.937,2.973,5.151,5.939,5.151h9.969c2.966,0,5.52-2.215,5.939-5.151l1.061-7.424c.124-.861-.133-1.732-.703-2.39ZM12,2c3.519,0,6.432,2.613,6.92,6H5.08c.488-3.387,3.401-6,6.92-6Zm8.96,16.565c-.28,1.958-1.982,3.435-3.96,3.435H7.031c-1.978,0-3.68-1.477-3.96-3.435l-1.061-7.424c-.042-.291,.042-.574,.234-.796,.193-.223,.461-.345,.756-.345H21.03c.294,0,.563,.123,.756,.345,.193,.222,.276,.505,.234,.796l-1.061,7.424Zm-4.96-2.565c0,.552-.448,1-1,1h-6c-.552,0-1-.448-1-1s.448-1,1-1h6c.552,0,,.448,1,1Z" />
+                        </svg>
+                    </span>
+                </div>
+                <div class="swiper-slide">
+                    <img src="vegetable-soup.png" alt="">
+                    <h3 class="menu-title">Vegetable Soup</h3>
+                    <div class="stars">★★★★★(160)</div>
+                    <div class="price">₦6500</div>
+                                        <span class="menu-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" style="width: 30px; height: 30px">
+                            <path d="M23.297,9.035c-.57-.658-1.396-1.035-2.267-1.035h-.089C20.441,3.507,16.624,0,12,0S3.559,3.507,3.059,8h-.059c-.871,0-1.697,.377-2.267,1.035C.164,9.692-.093,10.563,.031,11.424l1.061,7.424c.419,2.937,2.973,5.151,5.939,5.151h9.969c2.966,0,5.52-2.215,5.939-5.151l1.061-7.424c.124-.861-.133-1.732-.703-2.39ZM12,2c3.519,0,6.432,2.613,6.92,6H5.08c.488-3.387,3.401-6,6.92-6Zm8.96,16.565c-.28,1.958-1.982,3.435-3.96,3.435H7.031c-1.978,0-3.68-1.477-3.96-3.435l-1.061-7.424c-.042-.291,.042-.574,.234-.796,.193-.223,.461-.345,.756-.345H21.03c.294,0,.563,.123,.756,.345,.193,.222,.276,.505,.234,.796l-1.061,7.424Zm-4.96-2.565c0,.552-.448,1-1,1h-6c-.552,0-1-.448-1-1s.448-1,1-1h6c.552,0,,.448,1,1Z" />
+                        </svg>
+                    </span>
+                </div>
+                <div class="swiper-slide">
+                    <img src="ofe-nsala.png" alt="">
+                    <h3 class="menu-title">Ofe Nsala</h3>
+                    <div class="stars">★★★★★(180)</div>
+                    <div class="price">₦8000</div>
+                                    <span class="menu-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" style="width: 30px; height: 30px">
+                            <path d="M23.297,9.035c-.57-.658-1.396-1.035-2.267-1.035h-.089C20.441,3.507,16.624,0,12,0S3.559,3.507,3.059,8h-.059c-.871,0-1.697,.377-2.267,1.035C.164,9.692-.093,10.563,.031,11.424l1.061,7.424c.419,2.937,2.973,5.151,5.939,5.151h9.969c2.966,0,5.52-2.215,5.939-5.151l1.061-7.424c.124-.861-.133-1.732-.703-2.39ZM12,2c3.519,0,6.432,2.613,6.92,6H5.08c.488-3.387,3.401-6,6.92-6Zm8.96,16.565c-.28,1.958-1.982,3.435-3.96,3.435H7.031c-1.978,0-3.68-1.477-3.96-3.435l-1.061-7.424c-.042-.291,.042-.574,.234-.796,.193-.223,.461-.345,.756-.345H21.03c.294,0,.563,.123,.756,.345,.193,.222,.276,.505,.234,.796l-1.061,7.424Zm-4.96-2.565c0,.552-.448,1-1,1h-6c-.552,0-1-.448-1-1s.448-1,1-1h6c.552,0,,.448,1,1Z" />
+                        </svg>
+                    </span>
+                </div>
+                <div class="swiper-slide">
+                    <img src="gbegiri.jpeg" alt="">
+                    <h3 class="menu-title">Gbegiri</h3>
+                    <div class="stars">★★★★★(180)</div>
+                    <div class="price">₦5000</div>
+                                <span class="menu-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" style="width: 30px; height: 30px">
+                            <path d="M23.297,9.035c-.57-.658-1.396-1.035-2.267-1.035h-.089C20.441,3.507,16.624,0,12,0S3.559,3.507,3.059,8h-.059c-.871,0-1.697,.377-2.267,1.035C.164,9.692-.093,10.563,.031,11.424l1.061,7.424c.419,2.937,2.973,5.151,5.939,5.151h9.969c2.966,0,5.52-2.215,5.939-5.151l1.061-7.424c.124-.861-.133-1.732-.703-2.39ZM12,2c3.519,0,6.432,2.613,6.92,6H5.08c.488-3.387,3.401-6,6.92-6Zm8.96,16.565c-.28,1.958-1.982,3.435-3.96,3.435H7.031c-1.978,0-3.68-1.477-3.96-3.435l-1.061-7.424c-.042-.291,.042-.574,.234-.796,.193-.223,.461-.345,.756-.345H21.03c.294,0,.563,.123,.756,.345,.193,.222,.276,.505,.234,.796l-1.061,7.424Zm-4.96-2.565c0,.552-.448,1-1,1h-6c-.552,0-1-.448-1-1s.448-1,1-1h6c.552,0,,.448,1,1Z" />
+                        </svg>
+                    </span>
+                </div>
+                <div class="swiper-slide">
+                    <img src="ofe-owerri.png" alt="" />
+                    <h3 class="menu-title">Ofe Owerri</h3>
+                    <div class="stars">★★★★★(180)</div>
+                    <div class="price">₦8000</div>
+                                <span class="menu-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" style="width: 30px; height: 30px">
+                            <path d="M23.297,9.035c-.57-.658-1.396-1.035-2.267-1.035h-.089C20.441,3.507,16.624,0,12,0S3.559,3.507,3.059,8h-.059c-.871,0-1.697,.377-2.267,1.035C.164,9.692-.093,10.563,.031,11.424l1.061,7.424c.419,2.937,2.973,5.151,5.939,5.151h9.969c2.966,0,5.52-2.215,5.939-5.151l1.061-7.424c.124-.861-.133-1.732-.703-2.39ZM12,2c3.519,0,6.432,2.613,6.92,6H5.08c.488-3.387,3.401-6,6.92-6Zm8.96,16.565c-.28,1.958-1.982,3.435-3.96,3.435H7.031c-1.978,0-3.68-1.477-3.96-3.435l-1.061-7.424c-.042-.291,.042-.574,.234-.796,.193-.223,.461-.345,.756-.345H21.03c.294,0,.563,.123,.756,.345,.193,.222,.276,.505,.234,.796l-1.061,7.424Zm-4.96-2.565c0,.552-.448,1-1,1h-6c-.552,0-1-.448-1-1s.448-1,1-1h6c.552,0,,.448,1,1Z" />
+                        </svg>
+                    </span>
+                </div>
+                <div class="swiper-slide">
+                    <img src="okro.png" alt="">
+                    <h3 class="menu-title">Okro Soup</h3>
+                    <div class="stars">★★★★★(180)</div>
+                    <div class="price">₦8000</div>
+                                <span class="menu-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" style="width: 30px; height: 30px">
+                            <path d="M23.297,9.035c-.57-.658-1.396-1.035-2.267-1.035h-.089C20.441,3.507,16.624,0,12,0S3.559,3.507,3.059,8h-.059c-.871,0-1.697,.377-2.267,1.035C.164,9.692-.093,10.563,.031,11.424l1.061,7.424c.419,2.937,2.973,5.151,5.939,5.151h9.969c2.966,0,5.52-2.215,5.939-5.151l1.061-7.424c.124-.861-.133-1.732-.703-2.39ZM12,2c3.519,0,6.432,2.613,6.92,6H5.08c.488-3.387,3.401-6,6.92-6Zm8.96,16.565c-.28,1.958-1.982,3.435-3.96,3.435H7.031c-1.978,0-3.68-1.477-3.96-3.435l-1.061-7.424c-.042-.291,.042-.574,.234-.796,.193-.223,.461-.345,.756-.345H21.03c.294,0,.563,.123,.756,.345,.193,.222,.276,.505,.234,.796l-1.061,7.424Zm-4.96-2.565c0,.552-.448,1-1,1h-6c-.552,0-1-.448-1-1s.448-1,1-1h6c.552,0,,.448,1,1Z" />
+                        </svg>
+                    </span>
+                </div>
+                <div class="swiper-slide">
+                    <img src="bitter-leaf.png" alt="">
+                    <h3 class="menu-title">Bitter Leaf Soup</h3>
+                    <div class="stars">★★★★★(180)</div>
+                    <div class="price">₦8000</div>
+                            <span class="menu-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" style="width: 30px; height: 30px">
+                            <path d="M23.297,9.035c-.57-.658-1.396-1.035-2.267-1.035h-.089C20.441,3.507,16.624,0,12,0S3.559,3.507,3.059,8h-.059c-.871,0-1.697,.377-2.267,1.035C.164,9.692-.093,10.563,.031,11.424l1.061,7.424c.419,2.937,2.973,5.151,5.939,5.151h9.969c2.966,0,5.52-2.215,5.939-5.151l1.061-7.424c.124-.861-.133-1.732-.703-2.39ZM12,2c3.519,0,6.432,2.613,6.92,6H5.08c.488-3.387,3.401-6,6.92-6Zm8.96,16.565c-.28,1.958-1.982,3.435-3.96,3.435H7.031c-1.978,0-3.68-1.477-3.96-3.435l-1.061-7.424c-.042-.291,.042-.574,.234-.796,.193-.223,.461-.345,.756-.345H21.03c.294,0,.563,.123,.756,.345,.193,.222,.276,.505,.234,.796l-1.061,7.424Zm-4.96-2.565c0,.552-.448,1-1,1h-6c-.552,0-1-.448-1-1s.448-1,1-1h6c.552,0,,.448,1,1Z" />
+                        </svg>
+                    </span>
+                </div>
+                <div class="swiper-slide">
+                    <img src="egwusi.png" alt="">
+                    <h3 class="menu-title">Egusi Soup</h3>
+                    <div class="stars">★★★★★(180)</div>
+                    <div class="price">₦8000</div>
+                                <span class="menu-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" style="width: 30px; height: 30px">
+                            <path d="M23.297,9.035c-.57-.658-1.396-1.035-2.267-1.035h-.089C20.441,3.507,16.624,0,12,0S3.559,3.507,3.059,8h-.059c-.871,0-1.697,.377-2.267,1.035C.164,9.692-.093,10.563,.031,11.424l1.061,7.424c.419,2.937,2.973,5.151,5.939,5.151h9.969c2.966,0,5.52-2.215,5.939-5.151l1.061-7.424c.124-.861-.133-1.732-.703-2.39ZM12,2c3.519,0,6.432,2.613,6.92,6H5.08c.488-3.387,3.401-6,6.92-6Zm8.96,16.565c-.28,1.958-1.982,3.435-3.96,3.435H7.031c-1.978,0-3.68-1.477-3.96-3.435l-1.061-7.424c-.042-.291,.042-.574,.234-.796,.193-.223,.461-.345,.756-.345H21.03c.294,0,.563,.123,.756,.345,.193,.222,.276,.505,.234,.796l-1.061,7.424Zm-4.96-2.565c0,.552-.448,1-1,1h-6c-.552,0-1-.448-1-1s.448-1,1-1h6c.552,0,,.448,1,1Z" />
+                        </svg>
+                    </span>
+                </div>
+                <div class="swiper-slide">
+                    <img src="Afang.png" alt="">
+                    <h3 class="menu-title">Afang Soup</h3>
+                    <div class="stars">★★★★★(180)</div>
+                    <div class="price">₦8000</div>
+                                        <span class="menu-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" style="width: 30px; height: 30px">
+                            <path d="M23.297,9.035c-.57-.658-1.396-1.035-2.267-1.035h-.089C20.441,3.507,16.624,0,12,0S3.559,3.507,3.059,8h-.059c-.871,0-1.697,.377-2.267,1.035C.164,9.692-.093,10.563,.031,11.424l1.061,7.424c.419,2.937,2.973,5.151,5.939,5.151h9.969c2.966,0,5.52-2.215,5.939-5.151l1.061-7.424c.124-.861-.133-1.732-.703-2.39ZM12,2c3.519,0,6.432,2.613,6.92,6H5.08c.488-3.387,3.401-6,6.92-6Zm8.96,16.565c-.28,1.958-1.982,3.435-3.96,3.435H7.031c-1.978,0-3.68-1.477-3.96-3.435l-1.061-7.424c-.042-.291,.042-.574,.234-.796,.193-.223,.461-.345,.756-.345H21.03c.294,0,.563,.123,.756,.345,.193,.222,.276,.505,.234,.796l-1.061,7.424Zm-4.96-2.565c0,.552-.448,1-1,1h-6c-.552,0-1-.448-1-1s.448-1,1-1h6c.552,0,,.448,1,1Z" />
+                        </svg>
+                    </span>
+                </div>
+            </div>
+
+            <!-- Pagination -->
+            <div class="swiper-pagination"></div>
+        </div>
+    </div>
+
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 
